<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>LotroMaestro</groupId>
	<artifactId>LotroMaestro</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>src/com/digero/test</testSourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<!-- get all project dependencies -->
					<descriptorRefs>
						<descriptorRef>
                        jar-with-dependencies
                    </descriptorRef>
					</descriptorRefs>
					<!-- MainClass in mainfest make a executable jar -->
				</configuration>
				<executions>
					<execution>
						<id>MaestroJar</id>
						<goals>
							<goal>single</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<classifier>maestro</classifier>
							<archive>
								<index>true</index>
								<manifest>
									<addClasspath>true</addClasspath>
									<mainClass>com.digero.maestro.MaestroMain</mainClass>
								</manifest>
							</archive>
							<finalName>Maestro</finalName>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
					<execution>
						<id>AbcPlayerJar</id>
						<goals>
							<goal>single</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<classifier>abcplayer</classifier>
							<archive>
								<manifest>
									<addClasspath>true</addClasspath>
									<mainClass>com.digero.abcplayer.AbcPlayer</mainClass>
								</manifest>
							</archive>
							<finalName>AbcPlayer</finalName>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>default-jar</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>beatunes</id>
			<name>beaTunes Repository</name>
			<url>https://www.beatunes.com/repo/maven2</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.tritonus</groupId>
			<artifactId>tritonus_share</artifactId>
			<version>20041204</version>
		</dependency>
		<dependency>
			<groupId>javazoom.vorbisspi</groupId>
			<artifactId>vorbisspi</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.jcraft</groupId>
			<artifactId>jorbis</artifactId>
			<version>0.0.17</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jogg</artifactId>
			<version>0.0.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>info.clearthought</groupId>
			<artifactId>table-layout</artifactId>
			<version>4.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.0-M1</version>
		</dependency>
	</dependencies>
</project>